update about me, rename omegu to wave

--- a/index.html
+++ b/index.html
@@ -134,7 +134,16 @@
                   </div>
                 <div class = "col-eight">
                     <div class="intro-info">
-                        <p class="lead">I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Check out some of the things I've done below!</p>
+                        <!--<p class="lead">I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Check out some of the things I've done below!</p>-->
+                        <p class="lead">
+                            I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. 
+                            <br/>
+                            <br/>
+                            I'm currently working on <a href = "https://wavechat.tech" style="font-weight: bold;">Wave</a>, a platform that connects incoming first-year university students. I'm also interning at <a href = "https://theposturehealth.com" style="font-weight: bold;">PostureHealth</a> as a Software Engineering Intern. 
+                            <br/>
+                            <br/>
+                            Check out some of the things I've done below!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -497,11 +506,11 @@
 
                     <div class="bgrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/omegu-ss.jpg" alt="OmegU">
+                            <img src="images/wavelandingpage.jpg" alt="Wave">
                             <a href="#modal-07" class="overlay">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
-                                        <h3 class="folio-title">OmegU</h3>
+                                        <h3 class="folio-title">Wave Chat</h3>
                                         <span class="folio-types">
                                            Connecting first year university students, virtually
                                         </span>
@@ -734,12 +743,12 @@
                     <div id="modal-07" class="popup-modal slider mfp-hide">
 
                         <div class="media">
-                            <img src="images/omegu-ss.jpg" alt="OmegU"/>
+                            <img src="images/wavelandingpage.jpg" alt="Wave"/>
                         </div>
 
                         <div class="description-box">
-                            <h4>OmegU</h4>
-                            <p>OmegU is a web platform that connects incoming first-year university students from the same university. By placing users in one-on-one chats with other students who are either in their program or share common interests, OmegU allows meaningful friendships to be formed, despite the lack of in-person activities associated with one’s first year of university.
+                            <h4>Wave Chat</h4>
+                            <p>Wave is a web platform that connects incoming first-year university students from the same university. By placing users in one-on-one chats with other students who are either in their program or share common interests, Wave allows meaningful friendships to be formed, despite the lack of in-person activities associated with one’s first year of university.
                             </p>
 
                             <div class="categories">Full-Stack Web Development</div>
@@ -747,7 +756,7 @@
 
                         <div class="link-box">
                             <a href="#" class="popup-modal-dismiss">Close</a>
-                            <a href="https://github.com/nicholas-tao/OmegU-Dashboard" target="_blank">View Project</a>
+                            <a href="https://wavechat.tech" target="_blank">View Project</a>
                         </div>
 
                     </div> <!-- /modal-07 -->
