--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. 
                             <br/>
                             <br/>
-                            I'm currently working on <a href = "https://wavechat.tech" style="font-weight: bold;">Wave</a>, a platform that connects incoming first-year university students. I'm also interning at <a href = "https://theposturehealth.com" style="font-weight: bold;">PostureHealth</a> as a Software Engineering Intern. 
+                            I'm currently working on <a href = "https://wavechat.tech" style="font-weight: bold;">Wave</a>, a platform that connects incoming first-year university students since the Fall term is online for most people.
                             <br/>
                             <br/>
                             Check out some of the things I've done below!
