--- a/index.html
+++ b/index.html
@@ -157,20 +157,28 @@
             <div class="intro-info">
               <!--<p class="lead">I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Check out some of the things I've done below!</p>-->
               <p class="lead">
-                I am Nicholas, an incoming first-year Computer Science student
-                at the University of Waterloo. As someone who enjoys learning
-                about and working with new technologies, I am dedicated to
-                developing innovative solutions to everyday issues. Being an
-                active leader in multiple youth organizations and school clubs,
-                I strive to grow as an individual and learn from others. From
-                working as a Front End Developer at Helping Hands App, to being
-                the Executive Director of the Toronto Youth Network, I have
-                gained valuable experience in working collaboratively towards a
-                common goal.
+                I am Nicholas, a Computer Science student at the University of
+                Waterloo. As someone who enjoys learning about and working with
+                new technologies, I am dedicated to developing innovative
+                solutions to everyday issues. Being an active leader in multiple
+                youth organizations and school clubs, I strive to grow as an
+                individual and learn from others. From working as a Front End
+                Developer at Helping Hands App, to being the Executive Director
+                of the Toronto Youth Network, I have gained valuable experience
+                in working collaboratively towards a common goal.
+                <br />
+                <br />
+                Outside of school and software development, you can find me
+                playing badminton, hitting the gym, or making
+                <a
+                  href="https://www.youtube.com/channel/UCzSc8bhRKEKe7xEGp-5LWAg"
+                  style="font-weight: bold"
+                  >YouTube videos</a
+                >!
                 <br />
                 <br />
                 I'm currently working on
-                <a href="https://wavechat.tech" style="font-weight: bold;"
+                <a href="https://wavechat.tech" style="font-weight: bold"
                   >Wave</a
                 >, a platform that connects incoming first-year university
                 students.
@@ -274,20 +282,16 @@
                 <i class="fa fa-code"></i>
               </div>
 
-              <h5 class="stat-title">
-                Developer
-              </h5>
+              <h5 class="stat-title">Developer</h5>
             </div>
             <!-- /stat -->
 
             <div class="bgrid stat">
               <div class="icon-part">
-                <i class="fa fa-money"></i>
+                <i class="fa fa-lightbulb-o"></i>
               </div>
 
-              <h5 class="stat-title">
-                Finance Enthusiast
-              </h5>
+              <h5 class="stat-title">Finance Enthusiast</h5>
             </div>
             <!-- /stat -->
 
@@ -296,9 +300,7 @@
                 <i class="fa fa-bullseye"></i>
               </div>
 
-              <h5 class="stat-title">
-                Goal Driven
-              </h5>
+              <h5 class="stat-title">Goal Driven</h5>
             </div>
             <!-- /stat -->
 
@@ -307,9 +309,7 @@
                 <i class="fa fa-heart"></i>
               </div>
 
-              <h5 class="stat-title">
-                Passionate
-              </h5>
+              <h5 class="stat-title">Passionate</h5>
             </div>
             <!-- /stat -->
             <!--
