--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <title>Nicholas Tao</title>
     <meta
       name="description"
-      content="Nicholas Tao is a student developer passionate about developing innovative solutions to everyday problems"
+      content="Nicholas Tao is a Waterloo CS student passionate about developing innovative solutions to everyday problems"
     />
     <meta
       name="keywords"
-      content="Nicholas Tao, University of Waterloo, Computer Sciene, High School, Student, Technology, Toronto, Badminton"
+      content="Nicholas Tao, University of Waterloo, Computer Science, Student, Technology, Toronto, Badminton, Wave Chat"
     />
     <meta name="author" content="Nicholas Tao" />
 
