--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
             <div class="link-box">
               <a href="#" class="popup-modal-dismiss">Close</a>
               <a
-                href="https://nicholastao.tech/Speed-Typing-Game"
+                href="https://nicholastao.com/Speed-Typing-Game"
                 target="_blank"
                 >View Project</a
               >
