update pic of me, update about me

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="intro-content">
         <div class="row">
           <div class="col-twelve">
-            <h5>Hello, World.</h5>
+            <h5>Hello World!</h5>
             <h1>I'm Nicholas Tao.</h1>
 
             <p class="intro-position">
@@ -147,48 +147,52 @@
    ================================================== -->
     <section id="about">
       <div class="row section-intro">
-        <div class="col-twelve">
-          <h5>Nice to meet you!</h5>
-          <h1>Let me introduce myself.</h1>
-          <div class="col-four headshot">
-            <img src="images/headshot2.JPG" alt="Nicholas Tao Headshot" />
-          </div>
-          <div class="col-eight">
-            <div class="intro-info">
-              <!--<p class="lead">I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Check out some of the things I've done below!</p>-->
-              <p class="lead">
-                I am Nicholas, a Computer Science student at the University of
-                Waterloo. As someone who enjoys learning about and working with
-                new technologies, I am dedicated to developing innovative
-                solutions to everyday issues. Being an active leader in multiple
-                youth organizations and school clubs, I strive to grow as an
-                individual and learn from others. From working as a Front End
-                Developer at Helping Hands App, to being the Executive Director
-                of the Toronto Youth Network, I have gained valuable experience
-                in working collaboratively towards a common goal.
-                <br />
-                <br />
-                Outside of school and software development, you can find me
-                playing badminton, hitting the gym, or making
-                <a
-                  href="https://www.youtube.com/channel/UCzSc8bhRKEKe7xEGp-5LWAg"
-                  style="font-weight: bold"
-                  >YouTube videos</a
-                >!
-                <br />
-                <br />
-                I'm currently working on
-                <a href="https://wavechat.tech" style="font-weight: bold"
-                  >Wave</a
-                >, a platform that connects incoming first-year university
-                students.
-                <br />
-                <br />
-                Check out some of the things I've done below!
-              </p>
-            </div>
+        <!-- <div class="col-sm-12"> -->
+        <h5>Nice to meet you!</h5>
+        <h1>Let me introduce myself.</h1>
+        <div class="col-four headshot">
+          <img src="images/me-crop.JPG" alt="Nicholas Tao Headshot" />
+        </div>
+        <div class="col-eight">
+          <div class="intro-info">
+            <!--<p class="lead">I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Check out some of the things I've done below!</p>-->
+            <p class="lead">
+              👋I am Nicholas, a Computer Science student at the University of
+              Waterloo. As someone who enjoys learning about and working with
+              new technologies, I love discovering unique solutions to everyday
+              problems. From connecting university students through
+              <a href="https://wavechat.tech" style="font-weight: bold">Wave</a
+              >, to making job hunting easier with
+              <a href="https://apply-ai.online" style="font-weight: bold"
+                >ApplyAI</a
+              >, to tracking grocery store lineups with
+              <a href="https://lynz-frontend.web.app" style="font-weight: bold"
+                >Lynz</a
+              >, I'm always looking to tackle interesting challenges.
+              <br />
+              <br />
+              Outside of school, you can find me at a hackathon 👨‍💻(competed in
+              13 so far!) playing badminton 🏸, hitting the gym 🏋️, or making
+              <a
+                href="https://www.youtube.com/channel/UCzSc8bhRKEKe7xEGp-5LWAg"
+                style="font-weight: bold"
+                >YouTube videos 📹</a
+              >! I make videos about technology and my journey as a CS student
+              trying to figure out life.
+              <br />
+              <br />
+              Got an exciting opportunity or want to learn more about me?
+              <a href="mailto:tao.nicholas1@gmail.com" style="font-weight: bold"
+                >Let's chat.</a
+              >
+              ☕
+              <br />
+              <br />
+              Check out some of the things I've done below!
+            </p>
           </div>
         </div>
+        <!--</div>-->
       </div>
       <!-- /section-intro -->
       <!--
