--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h5>Nice to meet you!</h5>
         <h1>Let me introduce myself.</h1>
         <div class="col-four headshot">
-          <img src="images/me-crop.JPG" alt="Nicholas Tao Headshot" />
+          <img src="images/me-crop.jpg" alt="Nicholas Tao Headshot" />
         </div>
         <div class="col-eight">
           <div class="intro-info">
