--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               >, I'm always looking to tackle interesting challenges.
               <br />
               <br />
-              I'm currently working as a Frontend Engineer Intern at
+              I'm currently building the future of wholesale as a Frontend Engineer Intern at
               <a href="https://www.faire.com/" style="font-weight: bold"
                 >Faire</a
               >
